feat: starting table

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,6 @@
 :root {
   --background: #f0faff;
+  --background2: #fafefe;
   --foreground: #060d27;
   --highlight: #2A919F;
   --highlight2: #03c;
